   added private default constructor for testing, and implemented use of
   DefaultProperties.getTdsVersion().
 o INCOMPATIBLE INTERFACE CHANGE:  Renamed AbstractDataSource.getTds(),
   setTds() and private tds field to getTdsVersion(), setTdsVersion() and
   tdsVersion to match private field ConnectionJDBC2.  This also affects
   JtdsDataSource.

08/06/2004 - Brian Heineman
 o Update the usage of the prepareSql parameter.  This parameter is now used to
   determine how prepared statements are sent to the server.  Options include:
     0 - SQL is sent to the server each time without any preparation
     1 - Temporary stored procedures are created for each unique SQL statement
         and parameter combination
     2 - sp_executesql is used
     3 - sp_prepare is used in conjunction with sp_execute
     4 (not implemented) - sp_prepexec is used in conjunction with sp_execute
   Update the FAQ to include this new information.
 o Corrected bug with sp_prepare/sp_execute logic where statements without
   parameters were being sent as raw SQL even though the SQL was prepared with
   sp_prepare.
 o Corrected bug introduced with early work where the temporary stored procedure
   name may not have been unique for the connection.

08/05/2004 - David Kilzer
 o Added missing javadoc to DriverUnitTest methods.
 o Renamed Messages.defaultResource to Messages.DEFAULT_RESOURCE to reflect its
   use.
 o Refactored Driver.getPropertyInfo() so that properties are not hard-coded.
   Added Messages.loadDriverProperties() method.  Wrote additional unit tests
   for Driver.getPropertyInfo() in DriverUnitTest.  Added more utility methods
   to UnitTestBase.

08/05/2004 - Brian Heineman
 o Applied Mike Hutchinson's patch for [996631] Refactoring and some performance
   optimization.
 o Removed extraneous import statements.
 o Added check in data conversion for LOB values with a length greater than
   2,147,483,647.
 o Added "and Sybase" to JtdsDatabaseMetaData.getDriverName().
